--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,11 +1,31 @@
 body {
     background-color: black;
     font-family: Verdana;
+    text-align: center;
+    font-size: 16px;
+    color: white;
 }
 
 h1 {
-    color: white;
-    text-align: center;
     font-weight: normal;
     font-size: 50px;
+}
+
+a {
+    color: aquamarine;
+    font-size: 16px;
+}
+
+h2 {
+    font-weight: 200;
+    font-size: 42px;
+}
+
+.subtitle {
+    font-size: 21px;
+    color: gray;
+}
+
+.right {
+    text-align: right;
 }
